some missing NULL checks or asserts after CodeCache::find_blob_unsafe

XMLWordPrintable

    • b25
    • generic
    • generic

        Most return values of CodeCache::find_blob_unsafe are NULL checked or at least handled by an asserts. However especially on ppc a few are missing and should be added (e.g. in nativeInst_ppc.cpp).

              Assignee:
              Matthias Baesken
              Reporter:
              Matthias Baesken
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: