8256258: some missing NULL checks or asserts after CodeCache::find_blob_unsafe

Reviewed-by: shade